--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,8 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
+    "start": "node src/server.js",
+    "bounce": "npm i && node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
